@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-13T16:20:45Z",
-  "count_outdated" : 466,
-  "uniques_outdated" : 217,
+  "timestamp" : "2023-08-14T01:15:16Z",
+  "count_outdated" : 468,
+  "uniques_outdated" : 218,
   "count" : 476,
   "uniques" : 223,
   "clones" : [
-    {
-      "timestamp": "2023-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-01T00:00:00Z",
       "count": 1,
