@@ -1,3 +1,12 @@
+2023-08-14T01:15:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5850716150 # 696
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
+* notice: last 14d: unq all: 2 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 217 466 / 223 476
+* notice: next accum: outdated-unq outdated-all / unq all: 218 468 / 223 476
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-30] / []
+
 2023-08-13T16:20:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5848367618 # 695
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-13
